# idevicerestore

./: Makefile.am  configure.ac  libidevicerestore.pc.in
include/: Makefile.am
include/idevicerestore/: common.h  dfu.h  idevicerestore.h  ipsw.h  recovery.h
src/: Makefile.am  ace3.c  asr.c  common.c  dfu.c  idevicerestore.c  img4.c  ipsw.c  normal.c  recovery.c  restore.c
