nobase_dist_include_HEADERS =   idevicerestore/ace3.h \
                                idevicerestore/asr.h \
                                idevicerestore/common.h \
                                idevicerestore/dfu.h \
                                idevicerestore/download.h \
                                idevicerestore/endianness.h \
                                idevicerestore/fdr.h \
                                idevicerestore/fls.h \
                                idevicerestore/ftab.h \
                                idevicerestore/idevicerestore.h \
                                idevicerestore/img3.h \
                                idevicerestore/img4.h \
                                idevicerestore/ipsw.h \
                                idevicerestore/limera1n.h \
                                idevicerestore/limera1n_payload.h \
                                idevicerestore/locking.h \
                                idevicerestore/mbn.h \
                                idevicerestore/normal.h \
                                idevicerestore/recovery.h \
                                idevicerestore/restore.h
